--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ seaborn>=0.12.0
 numpy>=1.24.0
 fuzzywuzzy>=0.18.0
 python-levenshtein>=0.20.0
+azure-storage-blob>=12.19.0
+azure-identity>=1.15.0
+tqdm>=4.66.0
+plotly>=5.17.0
+requests>=2.31.0
+kaleido>=0.2.1
