--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ numpy>=1.24.0
 fuzzywuzzy>=0.18.0
 python-levenshtein>=0.20.0
 azure-storage-blob>=12.19.0
+azure-core>=1.29.0
 azure-identity>=1.15.0
 tqdm>=4.66.0
 plotly>=5.17.0
